--- a/index.html
+++ b/index.html
@@ -1,10 +1,20 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width,initial-scale=1.0" />
-    <title>Meeting Burn Rate</title>
-    <meta name="description" content="Meeting Burn Rate — lightweight homepage demo with retro styling" />
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Meeting Burn Rate – Calculate Meeting Costs in Real Time</title>
+    <meta name="description" content="Calculate your meeting's burn rate and watch the money fly by in real time. Instantly see how much your meetings cost." />
+    <meta name="keywords" content="meeting, burn rate, cost calculator, productivity, business, time tracking" />
+    <meta property="og:title" content="Meeting Burn Rate" />
+    <meta property="og:description" content="Calculate your meeting's burn rate and watch the money fly by in real time." />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://meetingburnra.de/" />
+    <meta property="og:image" content="https://meetingburnra.de/og-image.png" />
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Meeting Burn Rate" />
+    <meta name="twitter:description" content="Calculate your meeting's burn rate and watch the money fly by in real time." />
+    <meta name="twitter:image" content="https://meetingburnra.de/og-image.png" />
     <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&family=VT323&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="/src/style.css">
     <!-- Emoji favicon (💸) as inline SVG -->
