--- a/index.html
+++ b/index.html
@@ -21,9 +21,7 @@
     <link rel="icon" href="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 64 64'%3E%3Ctext y='50%25' x='50%25' dominant-baseline='middle' text-anchor='middle' font-size='44'%3E%F0%9F%92%B8%3C/text%3E%3C/svg%3E">
   </head>
   <body>
-    <video id="bg-video" autoplay muted loop playsinline preload="auto">
-      <source src="/material/humanatmshift.mp4" type="video/mp4">
-    </video>
+    <!-- background video removed -->
     <div class="backdrop-grayscale" aria-hidden="true"></div>
     <div id="app"></div>
     <script type="module" src="/src/main.js"></script>
