claude clean up

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover" />
     <title>Meeting Burn Rate – Calculate Meeting Costs in Real Time</title>
     <meta name="description" content="Calculate your meeting's burn rate and watch the money fly by in real time. Instantly see how much your meetings cost." />
     <meta name="keywords" content="meeting, burn rate, cost calculator, productivity, business, time tracking" />
